merged the result of cleaning up & migration to gradle to the trunk